@@ -5,5 +5,3 @@ EXTRA_DIST = config.rpath BUGS zvbi.spec.in zvbi.spec autogen.sh depcomp
 DISTCLEANFILES = site_def.h
 
 SUBDIRS = m4 src po test doc contrib
-
-ACLOCAL_AMFLAGS = -I m4
